# GhostChatterV2

./: .gitignore  GhostChatterChatServer.spec  GhostChatterClient.spec  GhostChatterServer.spec  README.md  Updater.spec  build.ps1  chat.db  instances.db  pyproject.toml  requirements.txt  users.db  version.txt
release/: commands.py  version.txt
src/client/: gui.py  main.py  network.py
src/common/: config.py  crypto.py  database.py  network.py
src/ghostchatter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/server/: auth_server.py  chat_server.py  commands.py  main.py
src/updater/: updater.py
