[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostchatter"
version = "0.1.0"
description = "A secure chat application with encryption"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "cryptography",
    "requests",
]
requires-python = ">=3.8"

[project.scripts]
ghostchatter-client = "src.client.main:main"
ghostchatter-server = "src.server.main:main"
ghostchatter-chat = "src.server.chat_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"